# VibeReaper

./: .gitignore  CMakeLists.txt  DEBUG_LOGGING.md  PHASE1_GUIDE.md  PHASE2_CODE_REVIEW.md  PHASE2_GUIDE.md  PHASE2_SUMMARY.md  PHASE3_KICKOFF.md  PLAN.md  README.md  build_log.txt  build_output.txt
.claude/: settings.local.json
assets/: VibeReaper.fgd
assets/maps/: debug_test.map
assets/maps/autosave/: debug_test.1.map  debug_test.2.map  debug_test.3.map
assets/shaders/: basic.frag  basic.vert  lighting.frag  lighting.vert
docs/phases/: README.md  phase3-guide.md  phase3-plan.md  phase4-review.md
src/: main.cpp
src/Engine/: BrushConverter.cpp  BrushConverter.h  Camera.cpp  Camera.h  Collision.cpp  Collision.h  Constants.h  Input.cpp  Input.h  MapLoader.cpp  MapLoader.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Game/: Player.cpp  Player.h  World.cpp  World.h
src/Utils/: Logger.cpp  Logger.h
tests/: README.md  test_main.cpp
tools/TrenchBroom/games/VibeReaper/: Entities.fgd  GameConfig.cfg
